<resources>
    <string name="app_name">Mobil Cüzdan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigation_home_button">Ana Sayfa</string>
    <string name="bottom_navigation_money_transfer_button">Hesaplarım</string>
    <string name="bottom_navigation_user_information">Kullanıcı Bilgileri</string>
    <string name="bottom_navigation_atm">ATM</string>
    <string name="full_name">Ad Soyad</string>
    <string name="login_screen_username_field">TC Kimlik Numarası</string>
    <string name="login_screen_password_field">Şifre</string>
    <string name="enterPassword">Şifre giriniz</string>
    <string name="repeatPassword">Şifreyi tekrar giriniz</string>
    <string name="save">Kaydet</string>
    <string name="branch">Şube</string>
    <string name="title_activity_splash_screen">Selam</string>
    <string name="app_title">Mobil Cüzdan</string>
    <string name="userInformation">Kullanıcı</string>
    <string name="search">Ara</string>
    <string name="lost_password">Şifremi Unuttum</string>
    <string name="exit_message">Görüşürüz...</string>
    <string name="page_reloading">İnternet Bağlantınızda Hata Var</string>
    <string name="page_reloading_button">Tekrar Dene</string>
    <string name="payment_button">Ödemeler</string>
    <string name="qr_button">Qr Kod</string>
    <string name="money_transfer">Para\nGönder</string>
    <string name="transactions">İşlemler</string>
    <string name="accountBalance">Kullanılabilir Bakiye</string>
    <string name="drawMoney">Para Çek</string>
    <string name="depositMoney">Para Yatır</string>
    <string name="destinationIban">Gönderilecek Iban</string>
    <string name="enterAmount">Miktar Giriniz</string>
    <string name="okay_button">Tamam</string>
    <string name="cancel_button">İptal</string>
    <string name="languages">Diller</string>
    <string name="settings">Ayarlar</string>
    <string name="userName">Ad</string>
    <string name="userSurname">Soyad</string>
    <string name="welcome">Hoş Geldiniz</string>
    <string name="citizenshipID">TC</string>
    <string name="birthdate">Doğum Tarihi</string>
    <string name="email">E-posta</string>
    <string name="phoneNumber">Telefon Numarası</string>
    <string name="qr_button_not_selected">Lütfen bir tür seçiniz.</string>
    <string name="internet_exception">Sistem hatası bulunmakta, lütfen sonra tekra deneyin</string>
    <string name="title_activity_help_screen">HelpScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Giriş</string>
    <string name="qr_code_reader">QR Kod Okuyucu</string>
    <string name="help">Yardım</string>
    <string name="account_name">Hesap Adı</string>
    <string name="default_value">Dövize göre sıralama aktifleştirildi (Varsayılan)</string>
    <string name="ascending">TRY cinsinden artana göre sıralama aktifleştirildi</string>
    <string name="descending">TRY cinsinden azalana göre sıralama aktifleştirildi</string>
    <string name="account_activity">Hesap\nHareketleri</string>
    <string name="close_account">Hesap\nKapatma</string>
    <string name="account_type">Hesap Türü</string>
    <string name="account_balance">Hesap Bakiyesi</string>
    <string name="qr">QR\nİşlemleri</string>
    <string name="visit_link">Bağlantıyı Ziyaret Et</string>
    <string name="iban_text">Iban Metni</string>
    <string name="date">Tarih</string>
    <string name="amount">Miktar</string>
    <string name="destination_name">Alıcı İsmi</string>
    <string name="last_one_week">Son 1 Hafta</string>
    <string name="last_one_month">Son 1 Ay</string>
    <string name="last_three_months">Son 3 Ay</string>
    <string name="last_six_months">Son 6 Ay</string>
    <string name="last_one_year">Son 1 Yıl</string>
    <string name="detail_filtering">Filtrelemeyi Kaldır</string>
    <string name="value">Değer</string>
    <string name="user_info_type">Kullanıcı Bilgi Türü</string>
    <string name="id_number_invalid">Kimlik numarası geçersiz</string>
    <string name="id_password_correct">Kimlik numarası ve şifre doğru...</string>
    <string name="successfully_registered">Başarılı kayıt oldunuz</string>
    <string name="language">Dil</string>
    <string name="english">İngilizce</string>
    <string name="turkish">Türkçe</string>
    <string name="settings_activity">Ayarlar Aktivitesi</string>
    <string name="receipt">Dekont</string>
    <string name="forget_password">Şifremi unuttum</string>
    <string name="download">Indir</string>
    <string name="account_details">Detaylar</string>
    <string name="sub_accounts">Aktiviteler</string>
    <string name="explanation">Açıklama</string>
    <string name="total_balance">Toplam Varlık</string>
    <string name="setting_button">Setting</string>
    <string name="dark_theme">Karanlık Tema</string>
    <string name="light_theme">Aydınlık Tema</string>
    <string name="theme">Tema</string>
    <string name="create_account">Yeni Hesap</string>
    <string name="filter">Zamana Göre Filtrele</string>
    <string name="vadeli">Vadeli</string>
    <string name="vadesiz">Vadesiz</string>
    <string name="vadesiz_hesabim">Vadesiz Hesabım</string>

    <string name="no_error">İşlem başarıyla gerçekleşti</string>
    <string name="missing_namesurname">Ad veya soyad eksik</string>
    <string name="empty_label">Eksik veya boş etiket</string>
    <string name="password_not_match">Parola eşleşmiyor</string>
    <string name="password_short_length">Parola uzunluğu 8 karakterden daha uzun olmalı</string>
    <string name="wrong_id_number">Yanlış TC Kimlik Numarası girildi</string>
    <string name="wrong_password">Hatalı parola girişi</string>
    <string name="Jan">Ocak</string>
    <string name="Feb">Şubat</string>
    <string name="Mar">Mart</string>
    <string name="Apr">Nisan</string>
    <string name="May">Mayıs</string>
    <string name="Jun">Haziran</string>
    <string name="Jul">Temmuz</string>
    <string name="Aug">Ağustos</string>
    <string name="Sep">Eylül</string>
    <string name="Oct">Ekim</string>
    <string name="Nov">Kasım</string>
    <string name="Dec">Aralık</string>
    <string name="open_account_enter_account_name">Yeni hesap adı</string>
    <string name="open_account_currency_type">Para birimi</string>
    <string name="bottom_menu_add_account">Hesap Aç</string>
    <string name="my_accounts">Hesaplarım</string>

    <string name="receipt_downloaded">Dekont başarıyla indirildi.</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="account_number">Müşteri Numarası</string>
    <string name="branch_name">Şube Adı</string>
    <string name="amaount">Bakiye</string>
    <string name="amount_try">TRY cinsinden bakiye</string>
    <string name="iban">IBAN</string>
    <string name="currency">Döviz Kodu</string>
    <string name="interest">Faiz Oranı</string>
    <string name="start_date">Hesap açılış Tarihi</string>
    <string name="end_date">Hesap Kapanış tarihi</string>
    <string name="block">Hesap Bloke mi?</string>
    <string name="deleted">Hesap Kapalı mı?</string>

</resources>