<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/bottom_navigation_home_button"
        android:icon="@drawable/ic_baseline_home"
        android:id="@+id/mainPageFragment"
        />
    <item
        android:title="@string/bottom_navigation_money_transfer_button"
        android:id="@+id/allAccountsFragment"
        android:icon="@drawable/ic_baseline_credit_card"
        />
    <item
        android:id="@+id/userInformationFragment"
        android:title="@string/bottom_navigation_user_information"
        android:icon="@drawable/ic_baseline_people_alt"
        />
    <item
        android:id="@+id/showNearestATM"
        android:title="@string/bottom_navigation_atm"
        android:icon="@drawable/ic_baseline_atm"
        />
</menu>