<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main_page.fragment.setting.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="100dp"
            android:text="Dil"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroupLanguage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="86dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonEnglish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/english"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="277dp"
                tools:layout_editor_absoluteY="98dp" />

            <RadioButton
                android:id="@+id/radioButtonTurkish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/turkish"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="277dp"
                tools:layout_editor_absoluteY="98dp" />
        </RadioGroup>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="112dp"
            android:text="TextView"
             app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <RadioGroup
            android:id="@+id/radioGroupTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="86dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonDark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dark_theme"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="277dp"
                tools:layout_editor_absoluteY="98dp" />

            <RadioButton
                android:id="@+id/radioButtonLight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/light_theme"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="277dp"
                tools:layout_editor_absoluteY="98dp" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>