<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main_page.fragment.setting.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBar"
            android:background="@color/intertech_actionbar_bottomnav_back_color"
            app:backgroundTint="@color/intertech_bottomnav_item_color"
            app:navigationIconTint="@color/intertech_bottomnav_item_color"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/appToolbarSettingActivity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/topbar_background"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:backgroundTint="@color/intertech_bottomnav_item_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/top_bar_menu"
                app:navigationIconTint="@color/intertech_bottomnav_item_color"
                app:title="@string/app_title" />
        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topAppBar">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/intertech_button_back_color"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/language"
                android:textAlignment="center"
                android:textColor="@color/intertech_button_text_color"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroupLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonTurkish"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/qr_radio_button_not_selected"
                        android:button="@drawable/qr_radio_button"
                        android:checked="false"
                        android:padding="10dp"
                        android:text="@string/turkish"
                        android:textAlignment="center"
                        android:textColor="@color/intertech_textview_text_color"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioButtonEnglish"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:background="@drawable/qr_radio_button_selected"
                        android:button="@drawable/qr_radio_button"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="@string/english"
                        android:textAlignment="center"
                        android:textColor="@color/intertech_textview_text_color"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </RadioGroup>
            </LinearLayout>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:background="@color/intertech_button_back_color"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/theme"
                android:textAlignment="center"
                android:textColor="@color/intertech_button_text_color"
                android:textSize="20dp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroupTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonDark"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/qr_radio_button_not_selected"
                        android:button="@drawable/qr_radio_button"
                        android:checked="false"
                        android:padding="10dp"
                        android:text="@string/dark_theme"
                        android:textAlignment="center"
                        android:textColor="@color/intertech_textview_text_color"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/radioButtonLight"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:background="@drawable/qr_radio_button_selected"
                        android:button="@drawable/qr_radio_button"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="@string/light_theme"
                        android:textAlignment="center"
                        android:textColor="@color/intertech_textview_text_color"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                </RadioGroup>
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>