<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intertech_screen_color"
    tools:context=".view.login_page.activity.CreateNewAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/forgetPasswordBackButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back"
            app:backgroundTint="@color/intertech_button_back_color" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgetPasswordCitizenshipIDLayout"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/login_screen_username_field"
            android:inputType="text"
            android:shadowColor="@color/intertech_textview_text_color"
            android:textColor="@color/intertech_textview_text_color"
            android:textColorHint="@color/intertech_textview_text_color"
            android:textStyle="bold"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgetPasswordCitizenshipIDTextField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgetPasswordPasswordLayout"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/enterPassword"
            android:inputType="textPassword"
            android:shadowColor="@color/intertech_textview_text_color"
            android:textColor="@color/intertech_textview_text_color"
            android:textColorHint="@color/intertech_textview_text_color"
            android:textStyle="bold"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgetPasswordPasswordTextField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgetPasswordRepeatPasswordLayout"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/repeatPassword"
            android:inputType="textPassword"
            android:shadowColor="@color/intertech_textview_text_color"
            android:textColor="@color/intertech_textview_text_color"
            android:textColorHint="@color/intertech_textview_text_color"
            android:textStyle="bold"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgetPasswordRepeatPasswordTextField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:textColor="@color/intertech_button_text_color"
            android:backgroundTint="@color/intertech_button_back_color"
            android:background="@drawable/button_settings"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>